fix nav item align

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -25,6 +25,8 @@
   align-items: center;
 
   &__logo {
+    display: flex;
+
     .logo {
       width: 187px;
       height: 56px;
